apps/bootstrap/templates/argocd-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command:
        - argocd-server
        - --staticassets
        - --repo-server
        - argocd-repo-server:8081
        # Removendo o --insecure para permitir o TLS na porta 443
