apps/bootstrap/templates/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    # Informa ao Nginx que o serviço de destino (backend) fala HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # Permite que o tráfego SSL passe sem ser alterado (evita erros de certificado)
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # Aumenta o timeout para evitar quedas em sincronizações longas
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  rules:
  - host: argocd-app-of-apps.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
