apps/bootstrap/templates/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: main-routing
  namespace: argocd
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingress-gateway-config
  http:
  # 1. Rota para o Kiali (mais específica vem primeiro)
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001

  # 2. Rota para o ArgoCD (Raiz - pega tudo o que sobrar)
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
